better error message

--- a/src/assets/css/forgotPassword.css
+++ b/src/assets/css/forgotPassword.css
@@ -26,3 +26,9 @@
     margin-bottom: 30px;
     text-align: center;
   }
+  .forgotError-width {
+    width: 100%;
+    position: relative;
+    max-width: 360px;
+    margin: 0 auto;
+  }
