--- a/src/assets/css/passwordReset.css
+++ b/src/assets/css/passwordReset.css
@@ -48,4 +48,10 @@
   .verifySubmit-btn button:hover {
     background-color: #28536B;
   }
-   
+  
+  .resetError-width {
+    width: 100%;
+    position: relative;
+    max-width: 460px;
+    margin: 0 auto;
+  }
