--- a/src/assets/css/authentication.css
+++ b/src/assets/css/authentication.css
@@ -39,6 +39,39 @@
     align-items: center;
     text-align: center;
   }
+  .about-section h2 {
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333;
+  }
+  .about-section p {
+    font-size: 11px;
+    line-height: 1.6;
+    color: #666;
+  }
+  .separator {
+    width: 100%;
+    max-width: 220px;
+    height: 1px; 
+    background-color: #333;
+    margin: 20px auto; 
+    opacity: 0.7;
+    border-radius: 2px; 
+  }
+
+  .logo-container {
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .about-logo {
+    width: 200px;
+    height: auto;
+    transition: transform 0.3s ease-in-out;
+  }
+  .about-logo:hover {
+    transform: scale(1.05);
+  }
   
   
   .login-popup {
