--- a/src/assets/css/forgotPassword.css
+++ b/src/assets/css/forgotPassword.css
@@ -32,3 +32,10 @@
     max-width: 360px;
     margin: 0 auto;
   }
+  .urlSent{
+    width: 100%;
+    position: relative;
+    max-width: 360px;
+    margin: 0 auto;
+    margin-top: 100px;
+  }
