EditForm: PHP function for editing password added

--- a/src/assets/css/authentication.css
+++ b/src/assets/css/authentication.css
@@ -277,3 +277,9 @@
     border-radius: 5px;
     font-size: 16px;
   }
+  
+  .input-field-disabled input {
+    background-color: #f5f5f5;
+    color: #aaa;
+    cursor: not-allowed;
+  }
