--- a/src/assets/css/authentication.css
+++ b/src/assets/css/authentication.css
@@ -1,11 +1,13 @@
 /* Sign-inSign-up */
 
 .authentication-page {
+    background-image: url("/public/img/bg.jpg");
+    background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: #f6f0ed;
   }
   .col-lg-12 {
     margin-top: 10px;
@@ -40,14 +42,14 @@
     text-align: center;
   }
   .about-section h2 {
-    font-size: 28px;
+    font-size: 22px;
     font-family: Arial, Helvetica, sans-serif;
-    color: #333;
+    color: #232323;
   }
   .about-section p {
     font-size: 17px;
     line-height: 1.6;
-    color: #666;
+    color: #333333;
   }
   .separator {
     width: 100%;
@@ -65,7 +67,7 @@
   }
 
   .about-logo {
-    width: 320px;
+    width: 280px;
     height: auto;
     transition: transform 0.3s ease-in-out;
   }
@@ -76,7 +78,7 @@
 
   .login-popup {
     padding: 10px;
-    height: 738px;
+    height: 700px;
     overflow: auto;
   }
 
