updated logo and some ui

--- a/src/assets/css/passwordReset.css
+++ b/src/assets/css/passwordReset.css
@@ -1,9 +1,11 @@
 .passwordReset-page {
+    background-image: url("/public/img/bg.jpg");
+    background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: #f6f0ed;
   }
   
   .passwordReset-container {
