--- a/src/assets/css/authentication.css
+++ b/src/assets/css/authentication.css
@@ -1,7 +1,7 @@
 /* Sign-inSign-up */
 
 .authentication-page {
-    background-image: url("/public/img/bg.jpg");
+    background-image: url("/public/img/bg.gif");
     background-size: cover;
     background-position: center;
     display: flex;
