authentification pages ui updated + fixed search bar width

--- a/src/assets/css/passwordReset.css
+++ b/src/assets/css/passwordReset.css
@@ -13,8 +13,7 @@
     height: 400px;
     display: flex;
     flex-direction: column;
-    background: #eaeaea;
-    border-radius: 10px; 
+    background: #ffffff; 
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); 
   }
   
