--- a/src/assets/css/myaccount.css
+++ b/src/assets/css/myaccount.css
@@ -109,3 +109,12 @@
   .container{
     max-width: 892.05px;
   }
+  .Fixed-navbar{
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    top: 0;
+  }
+  .header-content{
+    margin-top: 30px;
+  }
