Fixed some bugs

--- a/src/assets/css/EditProfile.css
+++ b/src/assets/css/EditProfile.css
@@ -62,9 +62,8 @@ input[type="file"] {
 .card {
     background: #f9f9f9; /* Light background */
     border-radius: 15px; /* Rounded corners */
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); /* Shadow effect */
-    padding: 20px;
-    transition: box-shadow 0.3s ease; /* Smooth transition */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); /* Shadow effect */    transition: box-shadow 0.3s ease; /* Smooth transition */
+
 }
 
 .card:hover {
